--- a/files.html
+++ b/files.html
@@ -58,10 +58,10 @@
             <td><h4>學務處衛保組<a name="2" id="2"></a></h4></td>
           </tr>
           <tr>
-            <td><p><a href="http://www.ntcu.edu.tw/sa/link/healthy/H1N1/" target="_blank">H1N1流感防疫網站製作 </a></p>
+            <td><p><a href="#" target="_blank">H1N1流感防疫網站製作 </a></p>
               <p>說明:H1N1新型流感防疫專區靜態網頁，使用CSS與javascript </p>
               <p><img width="240" height="204" src="f/pic/f2_1.jpg" align="middle" hspace="12" /></p>
-              <p><a href="http://www.ntcu.edu.tw/sa/link/healthy/global.htm" target="_blank">環保教育專區網站</a>製作:</p>
+              <p><a href="#" target="_blank">環保教育專區網站</a>製作:</p>
               <p>說明:環保教育專區，放置環保教育廣播MP3檔可供下載</p>
               <p><img src="f/pic/f2_2.jpg" width="274" height="205" /></p>
               <p align="right"> <a  href="#top" class="top">▲Top</a>　</p></td>
@@ -87,7 +87,7 @@
           <tr>
             <td><h4>google 教學網<a name="6" id="4"></a></h4></td>
           </tr>
-          <td><p><a href="f/Google teach/index.html" target="_blank">Google教學網站</a></p>
+          <td><p><a href="#" target="_blank">Google教學網站</a></p>
             <p> 利用captivate軟體錄製操作，過程以達教學目的 </p>
             <p><img src="f/pic/f5_1.jpg" width="500" height="295" /><br />
             </p>
